clusters/hl-sol-c1/apps/kubewall/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubewall
  namespace: kubewall-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`kube.k8s.kuipr.de`)
      kind: Rule
      services:
        - name: kubewall
          port: 8443
